--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 env_logger = "0.10.0"
+handlebars = "4.3.7"
 leptos = "0.4.10"
 log = "0.4.20"
 redis = "0.23.2"
