--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+askama = "0.12.0"
 env_logger = "0.10.0"
 handlebars = "4.3.7"
 leptos = "0.4.10"
