--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-files = "0.6.2"
+actix-session = {version = "0.7.2", features = ["cookie-session"]}
 actix-web = "4"
 askama = "0.12.0"
 env_logger = "0.10.0"
@@ -16,10 +18,4 @@ redis = "0.23.2"
 serde = "1.0.186"
 serde_json = "1.0.105"
 serde_urlencoded = "0.7.1"
-[dependencies.uuid]
-version = "1.4.1"
-features = [
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
-]
+uuid = { version = "1.4.1", features = ["v4", "serde"] }
